--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,31 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
-  ]
+    "config:base",
+    ":semanticCommits",
+    ":automergeRequireAllStatusChecks"
+  ],
+  "labels": [
+    "renovate-bot"
+  ],
+  "packageRules": [
+    {
+      "groupName": "all non-major dependencies with stable version",
+      "groupSlug": "all-minor-patch",
+      "matchCurrentVersion": "!/^0/",
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"]
+    }
+  ],
+  "automerge": true,
+  "platformAutomerge": true,
+  "rangeStrategy": "bump",
+  "stabilityDays": 14,
+  "automergeSchedule": [
+    "after 5am", "before 5pm", "on monday and tuesday and wednesday and thursday"
+  ],
+  "schedule": [
+    "before 5am every weekday"
+  ],
+  "timezone": "America/New_York"
 }
