--- a/infra/pi-cluster/ansible/tasks/kubernetes/argo.yml
+++ b/infra/pi-cluster/ansible/tasks/kubernetes/argo.yml
@@ -11,16 +11,6 @@
     PATH: "~/go/bin:{{ ansible_env.PATH }}"
 
   tasks:
-    - name: Download Argo CD cli install script.
-      ansible.builtin.get_url:
-        url: https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-arm64
-        dest: "~/argocd-linux-arm64"
-        mode: a+x
-
-    - name: Install Argo CD cli on the control plane.
-      ansible.builtin.shell: >-
-        sudo install -m 555 ~/argocd-linux-arm64 /usr/local/bin/argocd
-
     - name: Create the argocd k8s namespace
       kubernetes.core.k8s:
         name: argocd
@@ -30,7 +20,7 @@
 
     - name: Download argo-cd manifest to the cluster.
       ansible.builtin.get_url:
-        url: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/core-install.yaml
+        url: https://raw.githubusercontent.com/argoproj/argo-cd/cbee7e6011407ed2d1066c482db74e97e0cc6bdb/manifests/core-install.yaml
         dest: ~/argocd.yaml
         mode: '0664'
 
@@ -40,23 +30,13 @@
         state: present
         src: ~/argocd.yaml
 
-    - name: Login using Argo CD cli
-      ansible.builtin.shell: >-
-        argocd login --core
-
     - name: Copy the argo-cd app of apps manifest to the cluster.
       ansible.builtin.copy:
-        src: "{{ playbook_dir }}/../argocd/apps/argocd-apps.yml"
+        src: "{{ playbook_dir }}/../../../argocd/apps/argocd-apps.yml"
         dest: ~/argocd-apps.yml
 
-    - name: Apply the argo-cd app of apps manifest to the cluster.
+    - name: Apply the argo-cd app of apps manifest to the cluster. Note, it can take up to 5 minutes for ArgoCd to sync the app of apps.
       kubernetes.core.k8s:
         namespace: argocd
         state: present
         src: ~/argocd-apps.yml
-
-    - name: Sync the Argo CD apps.
-      ansible.builtin.shell: >-
-        KUBECONFIG=/etc/rancher/k3s/k3s.yaml
-        argocd app sync argocd-apps
-
