--- a/renovate.json
+++ b/renovate.json
@@ -21,6 +21,7 @@
   "platformAutomerge": true,
   "rangeStrategy": "bump",
   "stabilityDays": 14,
+  "configMigration": true,
   "automergeSchedule": [
     "after 5am on Monday"
   ],
