deps(renovate): ignore experiments directory

--- a/renovate.json
+++ b/renovate.json
@@ -22,6 +22,7 @@
       ]
     }
   ],
+  "ignorePaths": ["experiments/**"],
   "automerge": true,
   "platformAutomerge": true,
   "rangeStrategy": "bump",
