--- a/homelab/networking/compose.yaml
+++ b/homelab/networking/compose.yaml
@@ -23,7 +23,7 @@ services:
 
 networks:
   homelab_bridge:
-    name: bridge
+    name: homelab_bridge
     driver: bridge
 # todo determine if this is necessary
 #    ipam:
