--- a/homelab/networking/caddyfile
+++ b/homelab/networking/caddyfile
@@ -2,8 +2,15 @@
     respond /health-check 200
 }
 
-localhost {
-    respond "hello world!"
+:80 {
+	request_body {
+		max_size 10MB
+	}
+	reverse_proxy beszel-hub:80 {
+		transport http {
+			read_timeout 360s
+		}
+	}
 }
 
 :80 {
